[G6] Migration stack moderne : jakarta.* + log4j2 + SLF4J + Virtual Thread + auth basique
Sources Java :
- PatientResource : javax.ws.rs.* -> jakarta.ws.rs.*
- PatientService  : org.apache.log4j.Logger -> org.slf4j.Logger (SLF4J)
- JbpApplication  : Logger log4j -> SLF4J + Virtual Thread watchdog + BasicAuthFilter
- BasicAuthFilter : nouveau filtre JAX-RS (jakarta) - verifie Authorization: Basic

Logging :
- src/main/resources/log4j.properties supprime (log4j 1.x EOL)
- src/main/resources/log4j2.xml cree (log4j2 2.23.1 + SLF4J 2.0.13)

Valide : curl 401 sans auth, 401 mauvais creds, 200/201/204/404 avec admin:admin

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>